--- a/index.html
+++ b/index.html
@@ -11,25 +11,48 @@
 		}
 	</style>
 </head>
+
 <body style="min-width:800px;min-height:100px;">
-	<ul class="nav nav-tabs" role="tablist">
-		<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">按人</a></li>
-	  </ul>
-	<!-- <h4 style="float:left;">按人剩余工作量统计</h4> -->
-    <!-- <div style="float:right">
+	<p style="color: red;font-size: 12px;" id="tips"></p>
+	<div id="dev">
+
+		<ul class="nav nav-tabs" role="tablist">
+			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
+					data-toggle="tab">开发</a></li>
+		</ul>
+		<!-- <h4 style="float:left;">按人剩余工作量统计</h4> -->
+		<!-- <div style="float:right">
         <button class="btn" id="refresh">Refresh</button>
     </div> -->
-	  <table class="table table-bordered" style="margin-top: 10px;">
-		<thead>
-			<tr>
-			  <th>开发</th>
-			  <th>剩余工作量(天)</th>
-			  <th>明细</th>
-			</tr>
-		  </thead>
-		  <tbody id="resultTbody"></tbody>
-	  </table>
-	  <p style="color: red;font-size: 12px;" id="tips"></p>
+		<table class="table table-bordered" style="margin-top: 10px;">
+			<thead>
+				<tr>
+					<th>人员</th>
+					<th>剩余工作量(天)</th>
+					<th>明细</th>
+				</tr>
+			</thead>
+			<tbody id="devResultTbody"></tbody>
+		</table>
+
+	</div>
+	<div id="tester">
+		<ul class="nav nav-tabs" role="tablist">
+			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
+					data-toggle="tab">测试</a></li>
+		</ul>
+		<table class="table table-bordered" style="margin-top: 10px;">
+			<thead>
+				<tr>
+					<th>人员</th>
+					<th>剩余工作量(天)</th>
+					<th>明细</th>
+				</tr>
+			</thead>
+			<tbody id="testerResultTbody"></tbody>
+		</table>
+
+	</div>
 	<script type="text/javascript" src="jquery-1.8.3.js"></script>
 	<!-- <script type="text/javascript" src="moment.min.js"></script> -->
 	<!-- <script type="text/javascript" src="moment-zh-cn.js"></script> -->
