@添加pms域名设置提示

--- a/options.html
+++ b/options.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head><title>Extension Options</title></head>
+<head>
+	<meta charset="utf-8"/>
+  <title>Extension Options</title>
+</head>
 <body>
 
-Pms domain
+Jira域名(如: http://pms.xxx.com)
 <label>
-  <input type="text" id="pms-domain">
+  <input type="text" id="pms-domain" placeholder="如: http://pms.xxx.com">
 </label>
 
 <div id="status"></div>
