--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<title>Jira Rapid Board Helper</title>
 	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="bootstrap-3.4.1.min.css">
 	<style>
-		body{
+		body {
 			padding: 10px 20px 20px 20px;
 		}
 	</style>
@@ -15,45 +16,52 @@
 <body style="min-width:800px;min-height:100px;">
 	<p style="color: red;font-size: 12px;" id="tips"></p>
 	<div id="dev">
-
 		<ul class="nav nav-tabs" role="tablist">
-			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
-					data-toggle="tab">开发</a></li>
+			<li role="presentation" class="active"><a href="#dev" aria-controls="dev">开发</a></li>
+			<li role="presentation"><a href="#tester" aria-controls="tester">测试</a></li>
+			<li role="presentation"><a href="#component" aria-controls="component">开发小组</a></li>
 		</ul>
-		<!-- <h4 style="float:left;">按人剩余工作量统计</h4> -->
-		<!-- <div style="float:right">
-        <button class="btn" id="refresh">Refresh</button>
-    </div> -->
-		<table class="table table-bordered" style="margin-top: 10px;">
-			<thead>
-				<tr>
-					<th>人员</th>
-					<th>剩余工作量(天)</th>
-					<th>明细</th>
-				</tr>
-			</thead>
-			<tbody id="devResultTbody"></tbody>
-		</table>
-
+		<div class="tab-content">
+			<div role="tabpanel" class="tab-pane active" id="dev">
+				<table class="table table-bordered" style="margin-top: 10px;">
+					<thead>
+						<tr>
+							<th>人员</th>
+							<th>剩余工作量(天)</th>
+							<th>明细</th>
+						</tr>
+					</thead>
+					<tbody id="devResultTbody"></tbody>
+				</table>
+			</div>
+			<div role="tabpanel" class="tab-pane active" id="tester">
+				<table class="table table-bordered" style="margin-top: 10px;">
+					<thead>
+						<tr>
+							<th>人员</th>
+							<th>剩余工作量(天)</th>
+							<th>明细</th>
+						</tr>
+					</thead>
+					<tbody id="testerResultTbody"></tbody>
+				</table>
+			</div>
+			<div role="tabpanel" class="tab-pane" id="component">
+				<table class="table table-bordered" style="margin-top: 10px;">
+					<thead>
+						<tr>
+							<th>小组</th>
+							<th>剩余工作量(天)</th>
+							<th>明细</th>
+						</tr>
+					</thead>
+					<tbody id="componentResultTbody"></tbody>
+				</table>
+			</div>
+		</div>
 	</div>
-	<div id="tester">
-		<ul class="nav nav-tabs" role="tablist">
-			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
-					data-toggle="tab">测试</a></li>
-		</ul>
-		<table class="table table-bordered" style="margin-top: 10px;">
-			<thead>
-				<tr>
-					<th>人员</th>
-					<th>剩余工作量(天)</th>
-					<th>明细</th>
-				</tr>
-			</thead>
-			<tbody id="testerResultTbody"></tbody>
-		</table>
-
-	</div>
-	<script type="text/javascript" src="jquery-1.8.3.js"></script>
+	<script type="text/javascript" src="jquery-1.12.4.min.js"></script>
+	<script type="text/javascript" src="bootstrap-3.4.1.min.js"></script>
 	<!-- <script type="text/javascript" src="moment.min.js"></script> -->
 	<!-- <script type="text/javascript" src="moment-zh-cn.js"></script> -->
 	<script type="text/javascript" src="index.js"></script>
