--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<tbody id="devResultTbody"></tbody>
 				</table>
 			</div>
-			<div role="tabpanel" class="tab-pane active" id="tester">
+			<div role="tabpanel" class="tab-pane" id="tester">
 				<table class="table table-bordered" style="margin-top: 10px;">
 					<thead>
 						<tr>
